# download-manager

./: .bumpversion.cfg  .coveragerc  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 2-bug-report.yaml  3-documentation-improvement.yaml  4-feature-request.yaml  config.yaml
.github/workflows/: ci.yml
dlmachine/: __init__.py  _constants.py  _curlopt.py  _descriptor.py  _downloader.py  _manager.py  _metadata.py  _misc.py  _session.py
dlmachine/_data/: __init__.py
docs/: index.md
docs/src/: conf.py
download_manager/: __init__.py  __main__.py  _constants.py  _curlopt.py  _descriptor.py  _downloader.py  _freshness.py  _manager.py  _metadata.py  _misc.py  _open.py  _session.py  _storage.py  _utils.py  check_freshness.py
download_manager/_data/: __init__.py  url.yaml
scripts/: demo_failure.py  demo_success.py
tests/: conftest.py  test_curl.py  test_curlopt.py  test_descriptor.py  test_downloader.py  test_manager.py  test_requests.py  test_twentythree.py
