# ===================================
# =======        BUILD       ========
# ===================================

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

# ===================================
# =======       PROJECT      ========
# ===================================

[project]
name = "dlmachine"
version = "0.0.3"
description = "Download manager for Python"
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "OmniPath Team", email = "omnipathdb@gmail.com"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "cachedir>=0.1.2",
    "pkg-infra>=0.1.0",
    "requests>=2.32.3",
    "certifi>=2024.7.4",
    "tqdm",
    "toml",
]

[project.optional-dependencies]
curl = [
    "pycurl>=7.45.3",
]
dev = [
    "pre-commit",
    "bump2version",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1,<0.30",
]
tests = [
    "pytest>=6.0",
    "pytest-cov",
    "coverage>=6.0",
    "ruff",
]

[project.urls]
Documentation = "https://github.com/saezlab/dlmachine"
Homepage = "https://github.com/saezlab/dlmachine"
Issues = "https://github.com/saezlab/dlmachine/issues"
Repository = "https://github.com/saezlab/dlmachine"

# ===================================
# =======        TOOL        ========
# ===================================

[tool.hatch.build.targets.wheel]
packages = ["dlmachine"]

# ---- Coverage
[tool.coverage.run]
source = ["dlmachine"]
omit = ["**/test_*.py"]

# ---- Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "--import-mode=importlib",
]
filterwarnings = []

# ---- Ruff
[tool.ruff]
exclude = [
    "sandbox",
    "tests",
    "tests/**",
    "*/tests/**",
    "**/test_*.py",
]
extend-include = ["*.ipynb"]
line-length = 80
target-version = "py310"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
exclude = [
    "docs/_build",
    "tests",
    "tests/**",
    "*/tests/**",
    "**/test_*.py",
]
ignore = [
    "COM812",
    "ISC001",
    "B008",
    "B024",
    "D100",
    "D104",
    "D105",
    "D107",
    "D200",
    "D202",
    "D203",
    "D213",
    "D400",
    "D401",
    "E251",
    "E303",
    "E501",
    "E731",
    "E741",
    "UP017",
]
select = [
    "B",
    "BLE",
    "C4",
    "D",
    "E",
    "F",
    "I",
    "RUF100",
    "TID",
    "UP",
    "W",
    "Q",
    "S307",
    "ANN",
]
unfixable = ["UP"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.isort]
case-sensitive = false
combine-as-imports = true
force-sort-within-sections = true
force-wrap-aliases = true
known-first-party = ["dlmachine"]
known-third-party = ["numpy", "pandas"]
length-sort = false
no-lines-before = ["local-folder"]
order-by-type = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["D104", "F401"]
"docs/*" = ["I"]
"docs/src/conf.py" = ["D100"]
"tests/*" = ["D"]
"tests/conftest.py" = ["D101", "D102", "D103", "E402"]

[tool.ruff.lint.pydocstyle]
convention = "google"
